src/main/java/com/example/zavodliva/user/errors/EmailAllreadyExistExceptionMessage.java
package com.example.zavodliva.user.errors;

public class EmailAllreadyExistExceptionMessage extends RuntimeException {

	public EmailAllreadyExistExceptionMessage(String message) {
		super(message);
		
	}

}
